src/objects/Cheque_Batch__c.object
<CustomObject>
    <description>This is an object to which many cheques are linked</description>
    <fields>
        <fullName>Astra_Batch__c</fullName>
        <externalId>true</externalId>
        <label>Astra Batch</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Closed_Date__c</fullName>
        <label>Batch Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique field used to restrict having more then one open Holiday Voucher Refund Cheque Batch at the time. This field is updated by workflow rule.</description>
        <inlineHelpText>Unique field used to restrict having more then one open Holiday Voucher Refund Cheque Batch at the time. This field is updated by workflow rule.</inlineHelpText>
        <label>Index</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Slip_Ref_Number__c</fullName>
        <label>Payment Slip Ref Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Url__c</fullName>
        <description>Url for Holiday Voucher Cheque Refund Report</description>
        <formula>IF(RecordType.DeveloperName = &apos;Voucher_Refund_Cheque_Batch&apos;, LEFT($Api.Enterprise_Server_URL_300, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_300))+$Setup.Configuration__c.Holiday_Voucher_Cheque_Refund_Report_Id__c+&quot;?pv0=&quot;+Name, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Url for Holiday Voucher Cheque Refund Report</inlineHelpText>
        <label>Report Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synthesys_Batch_ID__c</fullName>
        <description>Used by interface to group cheques in a batch coming from Synthesys</description>
        <externalId>true</externalId>
        <label>Synthesys Batch ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_No_of_Cheques__c</fullName>
        <label>Total No of Cheques</label>
        <summaryForeignKey>Cheque__c.Cheque_Batch__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Value__c</fullName>
        <label>Total Value</label>
        <summarizedField>Cheque__c.Cheque_Amount__c</summarizedField>
        <summaryForeignKey>Cheque__c.Cheque_Batch__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Cheque Batch</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Cheque Batch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cheque Batches</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Default Cheque Batch Record Type</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>Voucher_Refund_Cheque_Batch</fullName>
        <active>true</active>
        <description>Voucher Refund Cheque Batch Record Type</description>
        <label>Voucher Refund Cheque Batch</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>